# rusty-dns

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
config/: rusty-dns.example.toml
launchd/: com.rusty-dns.agent.plist  com.rusty-dns.daemon.plist
scripts/: force-update.sh  monitor-updates.sh  test-provider.sh  validate-config.sh
src/: config.rs  detector.rs  error.rs  lib.rs  main.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/providers/: cloudflare.rs  duckdns.rs  godaddy.rs  mod.rs  namecheap.rs  tests.rs
systemd/: rusty-dns.service
