[package]
name = "rusty-dns"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["Conrado Mateu <conrado@mateu.dev>"]
repository = "https://github.com/conrado-mateu/rusty-dns"
description = "Dynamic DNS client with MCP support for AI assistants"
keywords = ["ddns", "dns", "cloudflare", "namecheap", "mcp"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "rusty-dns"
path = "src/main.rs"

[lib]
name = "rusty_dns"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async trait
async-trait = "0.1"

# Directories
dirs = "6"

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
mockall = "0.13"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
